tests/snapshots/guardian_api_test__accept_nomination_as_a_guardian.snap
---
source: tests/guardian_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    nomination_id: "[uuid]"
    status: ACCEPTED

