tests/snapshots/guardian_api_test__as_a_guardian_list_accounts_im_guardian_for.snap
---
source: tests/guardian_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    accounts:
      - id: "[uuid]"
        email: someone@example.com
        wallet_address: w123

