tests/snapshots/guardian_api_test__error_when_invalid_status_on_update_nomination_as_a_guardian.snap
---
source: tests/guardian_api_test.rs
expression: json_response
---
status: Error
payload:
  Error:
    error_message: Invalid status must be ACCEPTED or REJECTED

