tests/snapshots/guardian_api_test__error_when_try_to_accept_a_rejected_nomination_as_a_guardian.snap
---
source: tests/guardian_api_test.rs
expression: json_response
---
status: Error
payload:
  Error:
    error_message: Nomination already rejected

