tests/snapshots/guardian_api_test__list_filter_nominations_by_id_for_user_when_user_is_also_a_guardian.snap
---
source: tests/guardian_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    nominations:
      - id: "[uuid]"
        email: guardian@example.com
        guardian_id: "[uuid]"
        account_id: "[uuid]"
        status: PENDING

