tests/snapshots/guardian_api_test__successfully_reject_nomination_as_a_guardian.snap
---
source: tests/guardian_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    nomination_id: "[uuid]"
    status: REJECTED

